# testgen

./: .gitignore  LICENSE  README.md  create_release_files.py  create_remote_repo.py  installer.py  main.py  pyproject.toml  requirements.txt  setup.py  testgen.py  upload_release.py
.github/workflows/: deploy.yml  lint.yml  publish.yml  release.yml  tests.yml
ci/: create_repo.py  github_api.py
cmd/testgen/: ci_gen.py  main.py
langs/: lang_detector.py
testengines/: custom_runner.py  run_custom_tests.py  runner.py
tests/: test_custom_runner.py  test_lang_detector.py
ui/: tui.py
