[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testgen"
version = "0.1.0"
description = "CLI-утилита для генерации и запуска тестов для приложений на разных языках программирования"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1.3",
    "rich>=12.0.0",
    "prompt-toolkit>=3.0.28",
    "pyyaml>=6.0",
    "pytest>=7.3.1",
    "textual>=0.27.0",
    "typer==0.9.0",
    "pyfiglet>=0.8.post1",
    "pytest-cov>=4.1.0",
    "gitpython>=3.1.30",
]

[project.scripts]
testgen = "testgen:main" 